# novel-archives-text

./: Cargo.toml
crates/novel-archives-text/: Cargo.toml
crates/novel-archives-text/src/: id.rs  lib.rs  part.rs  term.rs  text.rs  token.rs
crates/novel-archives-text/src/parser/: error.rs  mod.rs  result.rs  token.rs
crates/novel-archives-text/src/parser/character/: complete.rs  mod.rs
crates/novel-archives-text/src/parser/extend_nom/character/: complete.rs  mod.rs
crates/novel-archives-text/src/parser/nom_extend/: mod.rs
crates/novel-archives-text/src/parser/nom_extend/character/: complete.rs  mod.rs
crates/novel-archives-text/src/parser/token/: complete.rs  context.rs  iterator.rs  mod.rs  span.rs
