[package]
name = "novel-archives-text"
version = "0.1.0"
authors = ["qwerty2501 <939468+qwerty2501@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-getters = "0.2.0"
derive-new = "0.5.9"
nom = "7.0.0"
thiserror = "1.0.28"
